--- a/bin/mkrc.in
+++ b/bin/mkrc.in
@@ -82,36 +82,31 @@ if [ $always_copy -eq 1 ]; then
   INSTALL="$INSTALL -C"
 fi
 
-files=$@
-
-PREVIFS=$IFS
-IFS=$(echo -en "\n\b")
-
 if [ $force_symlink -eq 1 ]; then
-  for file in $files; do
+  for file in "$@"; do
     dedotted="$(de_dot "$file")"
     INSTALL="$INSTALL -S $dedotted"
   done
 elif [ $force_symlink -eq 0 ]; then
-  for file in $files; do
+  for file in "$@"; do
     dedotted="$(de_dot "$file")"
     INSTALL="$INSTALL -s $dedotted"
   done
 fi
 
 if [ $undotted -eq 1 ]; then
-  for file in $files; do
+  for file in "$@"; do
     dedotted="$(de_dot "$file")"
     INSTALL="$INSTALL -U $dedotted"
   done
 elif [ $undotted -eq 0 ]; then
-  for file in $files; do
+  for file in "$@"; do
     dedotted="$(de_dot "$file")"
     INSTALL="$INSTALL -u $dedotted"
   done
 fi
 
-for file in $files; do
+for file in "$@"; do
   case "$file" in
     /*) : ;;
     *) [ -e "$PWD/$file" ] && file="$PWD/$file" ;;
@@ -123,7 +118,11 @@ for file in $files; do
   $VERBOSE "Moving..."
   mv_v "$file" "$dest/$dotless"
   $VERBOSE "Linking..."
-  $INSTALL -d "$DOTFILES_DIR" -t "${tag:--}" $install_args "$dotless"
+  #set -o xtrace
+  filetoinstall=$(echo "'$dotless'")
+  $INSTALL -d "$DOTFILES_DIR" -t "${tag:--}" $install_args $filetoinstall
+  # $INSTALL -d "$DOTFILES_DIR" -t "${tag:--}" $install_args $(echo "$dotless" | sed "s/\'//g;s/\ /\\\ /g")
+  #$INSTALL -d "$DOTFILES_DIR" -t "${tag:--}" $install_args "$dotless"
 done
 
 IFS=$PREVIFS
