--- a/bin/rcup.in
+++ b/bin/rcup.in
@@ -183,7 +183,6 @@ handle_command_line() {
   local version=0
   local run_hooks=1
   local dotfiles_dirs=
-  local files=
   local excludes=
   local includes=
   local always_copy=0
@@ -243,7 +242,13 @@ handle_command_line() {
   tags="${arg_tags:-$TAGS}"
   DOTFILES_DIRS="${dotfiles_dirs:-$DOTFILES_DIRS}"
   RUN_HOOKS=$run_hooks
-  files="$@"
+
+  local FILES=()
+  while [ $# -gt 0 ]
+  do
+    FILES+=("'$1'")
+    shift
+  done
 
   for tag in $tags; do
     LS_ARGS="$LS_ARGS -t $tag"
@@ -270,8 +275,9 @@ handle_command_line() {
     LS_ARGS="$LS_ARGS -u $never_undot"
   done
 
-  LS_ARGS="$LS_ARGS -B $hostname $files"
+  LS_ARGS="$LS_ARGS -vvvv -B $hostname ${FILES[@]}"
 
+  echo "LS_ARGS: $LS_ARGS"
   $DEBUG "LS_ARGS: $LS_ARGS"
 }
 
